k8s/cabundle.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-config
webhooks:
- clientConfig:
  name: ddac-hook-demo 
  caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01ETXpNVEl5TkRFeE5sb1hEVE13TURNeU9USXlOREV4Tmxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVhDClBIekdsTFZRWWVGbEV3eTI5Mi8zK05WYnNNQWFFYmpLSzZtTVppSVIwRjhXNUFLM3pEcGxaeTY5enA3WGc3d1EKQVVrLzFlcjUxTDBHVExIaVhSRlhSU3NoUWtQY1N5VE14U1R2MGtiYk9oNnBrKy8rL0oyeDZCNWQrOVEyOHhVaQpOeFBZYjI2NmtuNmN [...]
  sideEffects: None
  admissionReviewVersions: ["v1"]
  service:
    name: ddac 
    namespace: ddac
    path: "/mutate"
